# Ai_Powered_Todo_app

./: README.md  app.py  main.py  pyproject.toml  requiements.txt  simple_app.py
src/: database.py  gemini_client.py
