[tool.poetry]
name = "ai-powered-todo-app"
version = "0.1.0"
description = "AI-powered todo list application with PostgreSQL"
authors = ["Sujan Shrestha <suzanstha203@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
[tool.poetry.dependencies]
python = "^3.12.7"
streamlit = "1.48.1"
google-generativeai = "0.8.5"
pandas = "2.3.1"
psycopg2-binary = "2.9.10"
python-dotenv = "1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-back-by = "poetry-core"